--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,66 @@
-numpy
-pandas
-matplotlib
-torch
-torchvision
-opencv-python
-scikit-image
-tqdm
-ffmpeg-python
+# Core Dependencies
+numpy==1.26.3
+scipy==1.12.0
+matplotlib==3.8.2
+pandas==2.2.0
+tqdm==4.66.1
+pillow==10.2.0
+scikit-learn==1.4.0
+scikit-image==0.22.0
+pyyaml==6.0.1
+
+# Video Processing
+opencv-python==4.9.0.80
+opencv-contrib-python==4.9.0.80
+ffmpeg-python==0.2.0
+av==11.0.0  # PyAV for video reading/writing
+decord==0.6.0  # Efficient video loading
+
+# Deep Learning
+torch==2.1.2  # Specify cuda version if needed: +cu118
+torchvision==0.16.2
+tensorboard==2.15.1
+torchmetrics==1.2.1
+timm==0.9.12  # PyTorch Image Models
+
+# Task-Specific: Detection
+ultralytics==8.1.2  # YOLOv8
+pycocotools==2.0.7
+
+# Task-Specific: Segmentation
+albumentations==1.3.1
+monai==1.3.0  # Medical image segmentation tools (useful components)
+
+# Task-Specific: Tracking
+filterpy==1.4.5  # Kalman and Bayesian filters
+motmetrics==1.2.5  # MOT evaluation metrics
+lap==0.4.0  # Linear assignment problem solver
+
+# Utilities
+rich==13.7.0  # Better terminal output
+colorama==0.4.6
+loguru==0.7.2  # Logging
+einops==0.7.0  # Tensor operations
+h5py==3.10.0  # HDF5 file format support
+
+# Development and Testing
+pytest==7.4.4
+pytest-cov==4.1.0
+flake8==6.1.0
+black==23.12.1
+isort==5.13.2
+mypy==1.8.0
+pre-commit==3.6.0
+
+# Documentation
+sphinx==7.2.6
+sphinx-rtd-theme==1.3.0
+
+# Optional Dependencies (uncomment as needed)
+# kornia==0.7.0  # Computer vision operations
+# lpips==0.1.4  # Perceptual loss
+# onnx==1.15.0  # ONNX model export
+# onnxruntime==1.16.3  # ONNX runtime
+# accelerate==0.25.0  # Hugging Face Accelerate library for mixed precision
+# hydra-core==1.3.2  # Configuration management
+# wandb==0.16.2  # Weights & Biases integration
