--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ opencv-python>=4.5.0
 connected-components-3d>=3.9.0
 
 # Utilities
-tensorboard>=2.8.0
+tensorboard==2.17.0  # Specific version to ensure compatibility with TensorFlow 2.17.x
 seaborn>=0.11.0
 scipy>=1.7.0
 
@@ -31,7 +31,6 @@ decord==0.6.0  # Efficient video loading
 # Deep Learning
 torch==2.1.2  # Specify cuda version if needed: +cu118
 torchvision==0.16.2
-tensorboard==2.15.1
 torchmetrics==1.2.1
 timm==0.9.12  # PyTorch Image Models
 
